--- a/iOS/Base.lproj/LaunchScreen.storyboard
+++ b/iOS/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +12,59 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NRI-CV-od0">
+                                <rect key="frame" x="0.0" y="462" width="414" height="400"/>
+                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="400" id="DoU-fz-myH"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gQb-g8-ekl">
+                                <rect key="frame" x="-0.5" y="550" width="414" height="2"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="eG5-l7-h4s"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hXu-bl-whu">
+                                <rect key="frame" x="0.0" y="650" width="414" height="2"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="HM0-TV-zAn"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dVQ-qk-7HV">
+                                <rect key="frame" x="0.0" y="750" width="414" height="2"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="aFV-lu-kjX"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dVQ-qk-7HV" secondAttribute="bottom" constant="110" id="CLa-G4-GHb"/>
+                            <constraint firstAttribute="trailing" secondItem="hXu-bl-whu" secondAttribute="trailing" constant="0.20000000000000001" id="JPu-dM-6H6"/>
+                            <constraint firstItem="NRI-CV-od0" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="LP3-tf-oPA"/>
+                            <constraint firstAttribute="trailing" secondItem="dVQ-qk-7HV" secondAttribute="trailing" id="N1b-uK-leh"/>
+                            <constraint firstItem="hXu-bl-whu" firstAttribute="top" secondItem="gQb-g8-ekl" secondAttribute="bottom" constant="98" id="Scl-F9-Lb8"/>
+                            <constraint firstItem="gQb-g8-ekl" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="-0.5" id="Vux-VH-OQw"/>
+                            <constraint firstItem="NRI-CV-od0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="aS9-D8-v8g"/>
+                            <constraint firstItem="dVQ-qk-7HV" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="n9C-bf-7Sp"/>
+                            <constraint firstItem="hXu-bl-whu" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="-0.20000000000000001" id="nJF-tD-nh0"/>
+                            <constraint firstAttribute="trailing" secondItem="gQb-g8-ekl" secondAttribute="trailing" constant="0.5" id="rpl-i9-Bzm"/>
+                            <constraint firstItem="dVQ-qk-7HV" firstAttribute="top" secondItem="hXu-bl-whu" secondAttribute="bottom" constant="98" id="uCy-Te-NHi"/>
+                            <constraint firstItem="NRI-CV-od0" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vwZ-mS-u5j"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
 </document>
