--- a/iOS/Base.lproj/LaunchScreen.storyboard
+++ b/iOS/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -15,49 +15,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NRI-CV-od0">
-                                <rect key="frame" x="0.0" y="462" width="414" height="400"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NRI-CV-od0" userLabel="Base">
+                                <rect key="frame" x="0.0" y="496" width="414" height="400"/>
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="400" id="DoU-fz-myH"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gQb-g8-ekl">
-                                <rect key="frame" x="-0.5" y="550" width="414" height="2"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="If7-D1-tpn">
+                                <rect key="frame" x="0.0" y="694" width="414" height="2"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="2" id="eG5-l7-h4s"/>
+                                    <constraint firstAttribute="height" constant="2" id="GM3-xj-PJ4"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="2" id="eh6-6T-270"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xGh-mh-uER">
+                                <rect key="frame" x="0.0" y="594" width="414" height="2"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="45I-Ae-ea4"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="2" id="PJZ-or-uHr"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="2" id="VeL-a9-BFd"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hXu-bl-whu">
-                                <rect key="frame" x="0.0" y="650" width="414" height="2"/>
+                                <rect key="frame" x="0.0" y="794" width="414" height="2"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="2" id="HM0-TV-zAn"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dVQ-qk-7HV">
-                                <rect key="frame" x="0.0" y="750" width="414" height="2"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.circle.fill" translatesAutoresizingMaskIntoConstraints="NO" id="9Lx-xO-ygi">
+                                <rect key="frame" x="187" y="300" width="40" height="40"/>
+                                <color key="tintColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="2" id="aFV-lu-kjX"/>
+                                    <constraint firstAttribute="width" constant="40" id="oYN-UI-Y5S"/>
+                                    <constraint firstAttribute="height" constant="40" id="ph1-sY-THl"/>
                                 </constraints>
-                            </view>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dVQ-qk-7HV" secondAttribute="bottom" constant="110" id="CLa-G4-GHb"/>
-                            <constraint firstAttribute="trailing" secondItem="hXu-bl-whu" secondAttribute="trailing" constant="0.20000000000000001" id="JPu-dM-6H6"/>
-                            <constraint firstItem="NRI-CV-od0" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="LP3-tf-oPA"/>
-                            <constraint firstAttribute="trailing" secondItem="dVQ-qk-7HV" secondAttribute="trailing" id="N1b-uK-leh"/>
-                            <constraint firstItem="hXu-bl-whu" firstAttribute="top" secondItem="gQb-g8-ekl" secondAttribute="bottom" constant="98" id="Scl-F9-Lb8"/>
-                            <constraint firstItem="gQb-g8-ekl" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="-0.5" id="Vux-VH-OQw"/>
+                            <constraint firstAttribute="bottom" secondItem="NRI-CV-od0" secondAttribute="bottom" id="1Uo-Yf-mnE"/>
+                            <constraint firstAttribute="bottom" secondItem="If7-D1-tpn" secondAttribute="bottom" constant="200" id="8xB-yG-cvJ"/>
+                            <constraint firstAttribute="bottom" secondItem="hXu-bl-whu" secondAttribute="bottom" constant="100" id="IlI-L5-RzF"/>
+                            <constraint firstAttribute="trailing" secondItem="hXu-bl-whu" secondAttribute="trailing" id="JPu-dM-6H6"/>
                             <constraint firstItem="NRI-CV-od0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="aS9-D8-v8g"/>
-                            <constraint firstItem="dVQ-qk-7HV" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="n9C-bf-7Sp"/>
-                            <constraint firstItem="hXu-bl-whu" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="-0.20000000000000001" id="nJF-tD-nh0"/>
-                            <constraint firstAttribute="trailing" secondItem="gQb-g8-ekl" secondAttribute="trailing" constant="0.5" id="rpl-i9-Bzm"/>
-                            <constraint firstItem="dVQ-qk-7HV" firstAttribute="top" secondItem="hXu-bl-whu" secondAttribute="bottom" constant="98" id="uCy-Te-NHi"/>
+                            <constraint firstItem="If7-D1-tpn" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="d8L-K0-4xE"/>
+                            <constraint firstAttribute="bottom" secondItem="xGh-mh-uER" secondAttribute="bottom" constant="300" id="e1p-nK-PNH"/>
+                            <constraint firstItem="xGh-mh-uER" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="kAY-4t-IDj"/>
+                            <constraint firstItem="9Lx-xO-ygi" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="lCR-nZ-Iar"/>
+                            <constraint firstItem="NRI-CV-od0" firstAttribute="top" secondItem="9Lx-xO-ygi" secondAttribute="bottom" constant="156" id="mPi-6f-264"/>
+                            <constraint firstItem="hXu-bl-whu" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="nJF-tD-nh0"/>
+                            <constraint firstAttribute="trailing" secondItem="If7-D1-tpn" secondAttribute="trailing" id="sdc-q5-ZUW"/>
                             <constraint firstItem="NRI-CV-od0" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vwZ-mS-u5j"/>
+                            <constraint firstAttribute="trailing" secondItem="xGh-mh-uER" secondAttribute="trailing" id="yYH-2V-6TA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -67,4 +80,7 @@
             <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="plus.circle.fill" width="30" height="30"/>
+    </resources>
 </document>
